# rust_simpleterm

./: Cargo.toml  README.md
resources/: goals.txt
src/: art.rs  color.rs  command.rs  draw.rs  lib.rs  main.rs  message.rs  terminal.rs  text.rs
